# annotation-orchestrator

./: main.py  pyproject.toml
docs/: SPECIFICATION.md
docs/design/: 100-domain-objects.md
docs/spec/: 000-vision.md  010-ubiquitous-language.md  020-domain-model.md  030-invariants.md  040-workflows.md  050-capabilities.md  060-architecture.md  070-decisions.md  TRACEABILITY.md
