[project]
name = "annotation-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.8",
    "uvicorn>=0.49.0",
]
